Major Update
Invites logic corrected✅
add, remove, edit, see invites and their associate methods✅
list user groups✅
change group name corrected✅
cleaned code of server and DB classes✅

Issues:
- notify thread client update but unfinished
- menu logic
- clean cliente/funcoes code